# pegasus

./: .gitignore  CONTRIBUTING.md  EURUSD_2025-10-29.csv  LICENSE  README.md  plot_eurusd.py  pyproject.toml  spec.md
examples/: basic.py  fft_analyzer.py  hft_dashboard.py
pegasus/: __init__.py  charts.py  demo.py  types.py
pegasus/core/: __init__.py  context.py  viewport.py
pegasus/events/: handlers.py
pegasus/performance/: buffers.py  textures.py
pegasus/plotting/: axes.py  series.py
pegasus/styling/: theme.py
pegasus/utils/: data.py
themes/: README.md  cyberpunk.json  light.json  terminal.json
